gpt version trail

--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vignesh Ram | Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <h1 class="fade-in">Vignesh Ram</h1>
+        <p class="fade-in">UI/UX Designer | Front-End Developer | Branding Enthusiast</p>
+    </header>
+    
+    <section class="projects">
+        <div class="project fade-in" onclick="showDetails('Work Loom')">
+            <h2>Work Loom</h2>
+            <p>A job-searching portal blending design and branding.</p>
+        </div>
+        <div class="project fade-in" onclick="showDetails('EcoSip')">
+            <h2>EcoSip</h2>
+            <p>Eco-friendly water bottle company concept.</p>
+        </div>
+    </section>
+    
+    <footer>
+        <p class="fade-in">Let's connect! <a href="mailto:vignesh@example.com">Email Me</a></p>
+    </footer>
 </body>
 </html>
